--------------------------------------------------------------------------------
- CodeEasy Release Notes
--------------------------------------------------------------------------------

CodeEasy_1.0.4-Alpha  (release date: 2015-05-08)
----------------------------------------
    Release for External Consumption

    Added NetApp Copyright notice per NetApp legal policies. 
    Minor code and documentation clean-up of CeInit.pm.
    
    Added -comment <text> to the FlexClone creation command. The 
    -comment field now contains the FlexClown Owner username. This 
    will help with tracking who owns which FlexClones.

    The FlexClone report now shows the FlexClone owners.  



CodeEasy_1.0.3-Alpha  (release date: 2015-04-14)
----------------------------------------
    Release for External Consumption

    Update FlexClone report to show the following information.  The "FlexClone Act" or 
    FlexClone Actual data usage shows the amount of storage actually consumed
    by the FlexClone.  In one case the FlexClone is significantly different
    than the original volume thus shows 52.57% of the original mj_vol size.  Where
    as the other FlexClones use only 4.39% of the original volume size


    List FlexClones
    Parent Volume        Parent-Snapshot                FlexClone                          Parent Vol  FlexClone Vol      Split Est           FlexClone Act  Junction-path 
    ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
    mj_vol               mj_vol_snap_02                 mj_vol_snap02_clone                 445.83 MB      445.84 MB      426.32 MB       19.52 MB ( 4.38%)  /share/devops/users/ubuntu/mj_vol_snap02_clone
    mj_vol               mj_vol_snap_02                 mj_vol_snap02_clone2                445.83 MB      891.27 MB      422.69 MB      468.58 MB (52.57%)  /share/devops/users/ubuntu/mj_vol_snap02_clone2