@@ -1,1 +1,1 @@
-CodeEasy_1.0.5-Alpha
+CodeEasy_1.0.6-Alpha
