@@ -44,8 +44,8 @@ use warnings;
 #---------------------------------------- 
 # SDK setenv not set, assume the SDK is in parallel to the CodeEasy
 # tarball installation    ***** CUSTOMIZE ME *****
-use lib "$FindBin::Bin/../../netapp-manageability-sdk-5.3.1/lib/perl/NetApp";
-# use lib "<your_full_path>/netapp-manageability-sdk-5.2.2/lib/perl/NetApp";
+use lib "$FindBin::Bin/../../netapp-manageability-sdk-5.4/lib/perl/NetApp";
+# use lib "<your_full_path>/netapp-manageability-sdk-5.4/lib/perl/NetApp";
 
 # load the NetApp Manageability SDK components
 use NaServer;      
@@ -78,21 +78,14 @@ sub init_filer {
 
     # Creates a new object of NaServer class and sets the default value for the following object members:
     #   syntax: new($server, $majorversion, $minorversion)
-    print "\tCluster controler  = $CeInit::CE_CLUSTER\n";
-    my $naserver = NaServer->new($CeInit::CE_CLUSTER, 1, 21);
-
+    #           5.3.1 NMSDK use NaServer($host,1,7)
     # sets the name of the Storage Virtual Machine (SVM, formerly known as Vserver) 
     # to which a Cluster API need to be tunneled from a Cluster Management Interface.
-    $naserver->set_vserver($CeInit::CE_VSERVER);
-    # read back set value
-    my $vserver = $naserver->get_vserver();
-    print "\tset_vserver        = $vserver\n";
+    print "\tVServer controler  = $CeInit::CE_VSERVER\n";
+    my $naserver = NaServer->new($CeInit::CE_VSERVER, 1, 21);
 
     # set API transport type - HTTP is the default
     $naserver->set_transport_type($CeInit::CE_TRANSPORT_TYPE);
-    # read back set value
-    my $transport_type = $naserver->get_transport_type();
-    print "\tset_transport_type = $CeInit::CE_TRANSPORT_TYPE\n";
 
     # pass username/password for vserver ontapi application access
     #     $naserver->set_admin_user("vsadmin", "devops123");
@@ -103,10 +96,6 @@ sub init_filer {
 
     # set communication port
     $naserver->set_port($CeInit::CE_PORT);
-    # read back set value
-    my $port_value = $naserver->get_port();
-    print "\tset_port           = $port_value\n\n";
-
 
     # check connection to the filer by requesting a simple ontapi version status
     $out =  $naserver->invoke("system-get-version");
@@ -114,7 +103,7 @@ sub init_filer {
     # check error status and exit if basic communication with the filer can't be estabilished.
     $errno = $out->results_errno();
     if ($errno) {
-        print "ERROR ($main::progname): FAIL: Unable to connect to $CeInit::CE_CLUSTER \n";
+        print "ERROR ($main::progname): FAIL: Unable to connect to $CeInit::CE_VSERVER \n";
         print "ERROR ($main::progname): system-get-version returned with $errno and reason: " . 
 	                          '"' .  $out->results_reason() . "\n";
         print "ERROR ($main::progname): Exiting with error.\n";
@@ -124,14 +113,14 @@ sub init_filer {
     # print the controller version
     # Example:       NetApp Release 8.2.1RC2X6 Cluster-Mode: Wed Dec 18 19:14:04 PST 2013 
     $main::cdot_version = $out->child_get_string("version");
-    print "INFO  ($main::progname): Storage Controller <$CeInit::CE_CLUSTER> is running ONTAP API version:\n" . 
+    print "INFO  ($main::progname): Storage Controller <$CeInit::CE_VSERVER> is running ONTAP API version:\n" . 
           "      $main::cdot_version\n\n";
 
     # check that filer is running cDOT and not 7-mode
     if ( $out->child_get_string("is-clustered") eq "true") {
-	print "\nINFO  ($main::progname): Storage Controller <$CeInit::CE_CLUSTER> is running cDOT.\n\n";
+	print "\nINFO  ($main::progname): Storage Controller <$CeInit::CE_VSERVER> is running cDOT.\n\n";
     } else {
-	print   "ERROR ($main::progname): Storage Controller <$CeInit::CE_CLUSTER> is running in 7-mode\n" .
+	print   "ERROR ($main::progname): Storage Controller <$CeInit::CE_VSERVER> is running in 7-mode\n" .
 	        "       These scripts support cDOT (Clustered Data OnTap) only\n" .
 	        "Exiting...\n";
 	exit 1;
