@@ -29,31 +29,32 @@ package CeInit;
     #   SDK API Example:  $naserver->set_admin_user("vsadmin", "devops123");
     our $CE_STYLE           = "LOGIN";           # Sets the authentication mechanism to be used for communicating with the given server.
                                                  # default is 'LOGIN'
-    our @CE_ADMIN_USER      = ("vsadmin","devops123");
+    our @CE_ADMIN_USER      = ("devops","netapp123");
 
-    our $CE_CLUSTER         = "sv5-devops-01";   # management port 
-    our $CE_VSERVER         = "sv5-devops-01";   # name of the vserver port
+    our $CE_VSERVER         = "10.45.84.128";    # name of the vserver port
     our $CE_TRANSPORT_TYPE  = "HTTP";            # The default transport type is HTTP. For secure transport, use HTTPS as the transport type.
     our $CE_PORT            = "80";              # Sets the port on which the API commands need to be invoked for the given server context
                                                  # HTTP -> use port 80, HTTPS -> use port 443
 
     # default volume name - is the default used by CeCreateSnapshot and CeCreateFlexClone
-    our $CE_DEFAULT_VOLUME_NAME    = "viper_nightly_builds";
+    our $CE_DEFAULT_VOLUME_NAME    = "project_A_jenkin_build";
 
 
     # Storage Mount Points
     # root of the junction path 
     # this should be mounted on the unix side, then all other flexclones are automatically mounted when created.
     #      sudo mount -t nfs <vserver>:<junction_path> <unix mount point>
+    #      example:
+    #      sudo mount -t nfs devops_vserver:/ce_projects /
 						    
     # location on the filer where MASTER volume and snapshots are stored
-    our $CE_JUNCT_PATH_MASTER      = "/proj/viper";
+    our $CE_JUNCT_PATH_MASTER      = "/ce_projects/project_A/jenkins_build";
     # Default volume will be created (or exists) at 
     #    JP = $CD_JUNCT_PATH_MASTER/$CE_DEFAULT_VOLUME_NAME
-    #         /proj/viper/viper_nightly_builds     , where viper_nightly_builds is a volume
+    #         /ce_projects/project_A/jenkin_build     , where jenkin_build is a volume 
 
     # location on the filer where USERS FlexClone volumes are stored
-    our $CE_JUNCT_PATH_USERS       = "/proj/viper/users";
+    our $CE_JUNCT_PATH_USERS       = "/ce_projects/project_A/users";
     # FlexClones will be created at 
     #    JP = $CE_JUNCT_PATH_USERS/<flexclone name>
 
@@ -65,13 +66,13 @@ package CeInit;
 
     # UNIX path where master volume is mounted 
     #      this is volume which will be snapshot and flexcloned.
-    our $CE_UNIX_MASTER_VOLUME_PATH  = "/home/ubuntu/proj/viper/viper_nightly_builds";
+    our $CE_UNIX_MASTER_VOLUME_PATH  = "/ce_projects/project_A/jenkin_build";
 
     # USER FlexClones will be stored at 
     #    /x/eng/<site>/users/<username>/<flexclone> 
     #    the CeCreateFlexClone.pl will automatically add the <username> to the
     #    path - the filer junction path will automatically mount this location
-    our $CE_UNIX_USER_FLEXCLONE_PATH = "/home/ubuntu/proj/viper/users";
+    our $CE_UNIX_USER_FLEXCLONE_PATH = "/ce_projects/project_A/users";
 
 
     #---------------------------------------- 
@@ -101,31 +102,31 @@ package CeInit;
     #---------------------------------------- 
     # [-user <user name>] - User ID
     #                       This optionally specifies the name or ID of the user that is set as the owner of the volume's root.
-    my $CE_VOL_OWNER  = "devops";       
+    my $CE_VOL_OWNER  = "root";       
     my $user_id       = getpwnam($CE_VOL_OWNER); 
 
     # [-group <group name>] - Group ID
     #                         This optionally specifies the name or ID of the group that is set as the owner of the volume's root.
-    my $CE_VOL_GROUP  = "ubuntu";      # UNIX group name: project or dept group to use
+    my $CE_VOL_GROUP  = "root";      # UNIX group name: project or dept group to use
     my $group_id      = getpwnam($CE_VOL_GROUP); 
 
 
     # REQUIRED options for volume-create (as found in CeCreateVolume.pl)
-    our @CE_VOLUME_CREATE_REQUIRED = ("containing-aggr-name", 'aggr_devops_05'
+    our @CE_VOLUME_CREATE_REQUIRED = ("containing-aggr-name", 'aggr1_clus03_03_400SSD'
                                      );
 
     # OPTIONAL options for volume-create (as found in CeCreateVolume.pl)
     #          add or remove option pairs as needed.  
     our @CE_VOLUME_CREATE_OPTIONS  = ("size",                 '3000g',
-                                      "unix-permissions",     '775',
-                                      "export-policy",        'aws_bb2',
-                                      "snapshot-policy",      'devops_user',
+                                      "unix-permissions",     '777',
+                                      "export-policy",        'codeeasy_exports',
+                                      "snapshot-policy",      'default',
                                       "user-id",              $user_id, 
                                       "group-id",             $group_id,
                                       "space-reserve",        'none'
 				      );
                                                      
-
+                                      # "security-style",       'unix',
 
 
 
@@ -133,7 +134,7 @@ package CeInit;
 # Export variable for use by flow
 ########################################
 our @EXPORT = qw(@CE_ADMIN_USER$
-                 $CE_CLUSTER $CE_VSERVER 
+                 $CE_VSERVER 
 		 $CE_STYLE
                  $CE_TRANSPORT_TYPE $CE_PORT
 		 $CE_UNIX_USER_FLEXCLONE_PATH $CE_UNIX_MASTER_VOLUME_PATH 
